[metadata]
name = smbus3
version = 0.5.4
author = Elliott Indiran
author_email = elliott.indiran@protonmail.com
description = smbus3 is a drop-in replacement for smbus2, smbus-cffi, smbus-python written in pure Python, intended for use with Python 3.9+ on Unix-like systems
long_description = file: README.rst, doc/changelog.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/eindiran/smbus3
keywords = smbus, smbus2, smbus3, python, i2c, raspberrypi, linux
platforms = linux, unix, posix, macos, bsd
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: MacOS
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Typing :: Typed
    Natural Language :: English

[options]
include_package_data = True
python_requires = >= 3.9

[options.package_data]
* = *.rst, doc/*.rst
smbus3 = py.typed, smbus3.pyi

[options.extras_require]
docs = sphinx >= 7.0.0;

[options.packages.find]
where = smbus3
exclude =
    test*
